2008-06-23  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_io.c: Fix error message when encountering an unexpected EOF
	while reading PFS data.
	* doc/cvtool.texi: Fix formatting of tonemap documentation.

2008-05-17  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* NEWS, doc/cvtool.1, doc/cvtool.texi, doc/cvl.texi: Update for 0.2.4.

2008-05-16  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Remove non-portable MH_STDIN and MH_STDOUT macros.

2008-04-28  Martin Lambers <marlam@marlam.de>

	* cvl/cvl/cvl_color.h, cvl/cvl_color.c,
	cvl/glsl/color/pseudo_color.glsl, cvtool/cmd_visualize.c: Add an
	invert option to pseudo coloring, to allow to use hue values in the
	opposite direction.

2008-04-22  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_channelextract.c: Fix number of channels in output.
	* cvtool/cmd_convert.c: Keep frame format if -f is not used.
	* cvl/cvl/cvl_visualization.h, cvl/cvl_visualization.c,
	cvtool/cmd_visualize.c, tests/cmd_visualize.sh: Remove the defunct
	needle visualization code.
	* cvl/cvl_io.c: Fix writing of PNM frames with three channels and
	format CVL_UNKNOWN.

2008-04-21  Martin Lambers <marlam@marlam.de>

	* NEWS, cvl/cvl_io.c: Fix PAM support. Add support for PAM files with
	four channels.
	* cvl/cvl/cvl_color.h, cvl/cvl_color.c: New function
	cvl_convert_format_forced().
	* configure.ac: Bump library version number.
	* NEWS, cvl/cvl_io.c: Fix PAM support. Add support for PAM files with
	two channels.

2008-04-19  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_frame.c: Explicitly convert the frame in
	cvl_frame_set_type(). Do not defer conversion to the next usage of the
	frame, because then it might be done over and over again. This fixes
	a performance problem in CVLView.

2008-04-18  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_gl.c: Save both modelview and projection matrix in
	cvl_gl_state_save().
	* configure.ac, doc/cvl.texi, doc/cvtool.texi: Bump version to 0.2.4.

2008-04-14  Martin Lambers <marlam@marlam.de>
